recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  
  if (step==0) {
    
  } 
  
  else { spiral(steps-1, angle,length,increment+increment);
         
       
       
       }

  
  
  
  
  
}